--- a/_layouts/functionalRequirement.html
+++ b/_layouts/functionalRequirement.html
@@ -18,7 +18,7 @@ layout: default
     <dd>{{ implementationStatus }}</dd>
 
     <dt>Kano-Typ</dt>
-    {% include /functions/kano-type.html my_requirement=page %}
+    {% include /functions/get-kano-type.html my_requirement=page %}
     <dd>{{ kanoType }} </dd>
     <dt>Begründung für Kano-Typ</dt>
     <dd>{{ kanoReasoning }}</dd>
