--- a/_layouts/functionalRequirement.html
+++ b/_layouts/functionalRequirement.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<!-- {% include /functions/get-status-infos.html mydecision=page %} -->
-<h1>Funktionale Anforderung »{{ page.title }}«</h1>
+{% include /functions/get-globalid.html myCollection=site.functionalRequirements myArtefact=page myPrefix="FR" %}
+<h1>Funktionale Anforderung »{{ page.title }}« ({{ globalId }})</h1>
 
 <dl>
     <dt>Autor(en)</dt>
