Fixed Responsible display

--- a/_layouts/interview.html
+++ b/_layouts/interview.html
@@ -14,7 +14,7 @@ layout: default
     <dd>{{ stakeholder.name }}</dd>
 
     <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html mydecision=page %}{{ responsible_string }}</dd>
+    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
 
 
 
