--- a/_layouts/stakeholder.html
+++ b/_layouts/stakeholder.html
@@ -22,7 +22,7 @@ layout: default
     {% endif %}
 
     <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html mydecision=page %}{{responsible_string}}</dd>
+    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
 
     <dt>Beziehung zum Projekt</dt>
     <dd> {{ page.relationshipToProject }} </dd>
