--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -37,7 +37,7 @@ layout: default
     {% endif %}
 
     <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html mydecision=page %}{{ responsible_string }}</dd>
+    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
 
 
     <dt>History</dt>
