--- a/_layouts/literatureReference.html
+++ b/_layouts/literatureReference.html
@@ -22,7 +22,7 @@ layout: default
     <dd>{{page.source_url}}</dd>
 
     <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html mydecision=page %}{{ responsible_string }}</dd>
+    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
 
 
 
