--- a/_includes/functions/checks/check-goal-refs.html
+++ b/_includes/functions/checks/check-goal-refs.html
@@ -6,12 +6,11 @@
 {% assign warningList = warningString | split: ";" %}
 
 
-{% comment %} ***** Error/Warning Numbers 100 - 120 reserved here! **** {% endcomment %}
+{% comment %} ***** Error/Warning Numbers 050 - 069 reserved for goal ref issues **** {% endcomment %}
 
-{% comment %}---------- goals -----------{% endcomment %}
 {% if artefact.goals %}
 	{% if artefact.goals.size == 0 %}
-		{% include /functions/define-message.html ignore=artefact.ignore msgno="e100"
+		{% include /functions/define-message.html ignore=artefact.ignore msgno="e050"
 				msg="Es muss mindestens eine Ziel-Referenz angegeben werden!" %}
 		{% assign errorList = errorList | push: out_msg %}
 	{% else %}
@@ -19,18 +18,18 @@
 			{% assign foundGoals = site.goals | where:"acronym", goalRef %}
 			{% if foundGoals.size == 0 %}
 				{% assign myMsg = "Ziel-Referenz '" | append: goalRef | append: "' exististiert nicht!" %}
-				{% include /functions/define-message.html ignore=artefact.ignore msgno="e101" msg=myMsg %}
+				{% include /functions/define-message.html ignore=artefact.ignore msgno="e051" msg=myMsg %}
 				{% assign errorList = errorList | push: out_msg %}
 			{% endif %}
 			{% if foundGoals.size > 1 %}
-				{% assign myMsg = "Es gibt mehr als ein Ziel '" | append: goalRef | append: "' - bitte Namen anpassen!" %}
-				{% include /functions/define-message.html ignore=artefact.ignore msgno="e102" msg=myMsg %}
+				{% assign myMsg = "Es gibt mehr als ein Ziel '" | append: goalRef | append: "' - bitte prüfen!" %}
+				{% include /functions/define-message.html ignore=artefact.ignore msgno="e052" msg=myMsg %}
 				{% assign errorList = errorList | push: out_msg %}
 			{% endif %}
 		{% endfor %}
 	{% endif %}
 {% else %}
-	{% include /functions/define-message.html ignore=artefact.ignore msgno="e100"
+	{% include /functions/define-message.html ignore=artefact.ignore msgno="e050"
 			msg="Es muss mindestens eine Ziel-Referenz (Feld 'goals') angegeben werden!" %}
 	{% assign errorList = errorList | push: out_msg %}
 {% endif %}
