sensible interview names

--- a/_layouts/interview.html
+++ b/_layouts/interview.html
@@ -4,7 +4,8 @@ layout: default
 
 {% assign stakeholder = site.stakeholders | where: "acronym", page.stakeholder | first %}
 
-<h1>Interview mit {{ stakeholder.name }}</h1>
+{% include /functions/get-interview-name.html myInterview=page %}
+<h1>{{ interviewName }}</h1>
 
 <dl>
     <dt>Acronym</dt>
