--- a/_layouts/stakeholderRole.html
+++ b/_layouts/stakeholderRole.html
@@ -2,33 +2,30 @@
 layout: default
 ---
 
-<!-- {% include /functions/get-status-infos.html mydecision=page %} -->
-<h1>{{ page.title }}</h1>
+{% include /functions/get-globalid.html myCollection=site.stakeholderRoles myArtefact=page myPrefix="SHR" %}
+<h1>Stakeholder-Rolle »{{ page.name }}« ({{ globalId }})</h1>
 
 <dl>
-    <dt>Acronym</dt>
-    <dd>{{ page.acronym }}</dd>
+    <dt>Autor(en)</dt>
+    {% include /functions/resolve-names.html my_responsible=page.responsible %}
+    <dd>{{ responsibleString }}</dd>
 
-    <dt>Name</dt>
-    <dd>{{ page.name }}</dd>
+    <dt>Beschreibung</dt>
+    <dd>{{ page.description }}</dd>
 
-    <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
+    <dt>Stakeholder mit dieser Rolle</dt>
+    <dd>tbd.</dd>
 
-    {% if page.todos and page.todos.size > 0 %}
-        {% assign todo_counter = 0 %}
-        <dt>Todos</dt>
-        {% for entry in page.todos %}
-            {% assign todo_counter = todo_counter | plus: 1 %}
-            <dd>({{ todo_counter }}) {{ entry }}</dd>
-        {% endfor %}
-    {% endif %}
+    <dt>Wo wird diese Stakeholder-Rolle verwendet?</dt>
+    <dd>tbd.</dd>
 
-    <dt>History</dt>
-    {% for entry in page.history %}
-        <dd>({{ entry[0]}}) &nbsp; {{ entry[1].date }} - {{ entry[1].comment }}</dd>
-    {% endfor %}
+    {% include /functions/print-history.html myArtefact=page %}
 
+    {% include /functions/checks/check-generic-aspects.html myArtefact=page
+            myErrorString="" myWarningString="" %}
+    {% include /functions/checks/check-stakeholderRole.html myArtefact=page
+            myErrorString=errorString myWarningString=warningString %}
+    {% include /functions/print-detailed-check-messages.html errors=errorString warnings=warningString todos=page.todo %}
 </dl>
 
 
