refactored the ID generation

--- a/_includes/functions/get-globalid.html
+++ b/_includes/functions/get-globalid.html
@@ -1,7 +1,8 @@
 {% assign artefact = include.myArtefact %}
 {% assign collection = include.myCollection %}
-{% assign prefix = include.myPrefix %}
+{% assign type = include.myType %}
 
+{% assign prefix = site.data.metadata[type].prefix %}
 {% assign sortField = site.data.metadata[artefact.type].sortField %}
 {% assign collection = collection | sort: sortField %}
 
