--- a/_includes/functions/find-artefacts-referencing-stakeholder-role.html
+++ b/_includes/functions/find-artefacts-referencing-stakeholder-role.html
@@ -1,14 +1,23 @@
 {% assign stakeholderRole = include.myStakeholderRole %}
 {% assign type = include.myType %}
+{% assign refsAsList = include.refsAsList %}
 {% assign collection = include.myCollection %}
 {% assign withID = include.withID %}
 
-{% assign whereExpString = "item.stakeholderRole contains '"|
-            append: stakeholderRole.acronym | append: "'" %}
-{% assign itemList = collection | where_exp: "item", whereExpString %}
+{% if refsAsList %}
+    {% assign whereExpString = "item.stakeholderRole contains '"|
+                append: stakeholderRole.acronym | append: "'" %}
+    {% assign itemList = collection | where_exp: "item", whereExpString %}
+{% else %}
+    {% assign stakeholderRoleAcronym = stakeholderRole.acronym
+    {% assign itemList = collection | where: "stakeholderRole", stakeholderRoleAcronym %}
+{% endif %}
+
 {% assign linkList = "" | split: ";" %}
+{% assign acronymList = "" | split: ";" %}
 {% assign sortField = site.data.metadata[type].sortField %}
 {% for item in itemList %}
+    {% assign acronymList = acronymList | push: item.acronym %}
     {% assign itemName = item[sortField] %}
     {% if withID %}
         {% include /functions/get-globalid.html myCollection=collection myArtefact=item myType=type %}
@@ -19,3 +28,4 @@
 {% endfor %}
 
 {% assign linksString = linkList | join: ";" %}
+{% assign acronymString = acronymList | join: ";" %}
