added use cases to the stakeholder role ref

--- a/_includes/functions/checks/check-stakeholderRole.html
+++ b/_includes/functions/checks/check-stakeholderRole.html
@@ -39,7 +39,7 @@
 
 {% comment %}---------- referenced by a stakeholder? -----------{% endcomment %}
 {% include /functions/find-artefacts-referencing-stakeholder-role.html myStakeholderRole=artefact
-    refsAsList=true myType="stakeholder" myCollection=site.stakeholders withID=false %}
+        myType="stakeholder" myCollection=site.stakeholders withID=false %}
 
 {% if linksString.size > 0 %}
 {% else %}
