--- a/_layouts/stakeholderRole.html
+++ b/_layouts/stakeholderRole.html
@@ -15,7 +15,7 @@ layout: default
     <dd>{{ page.description }}</dd>
 
     {% include /functions/find-artefacts-referencing-stakeholder-role.html
-            myStakeholderRole=page refsAsList=true myType="stakeholder" myCollection=site.stakeholders %}
+            myStakeholderRole=page myType="stakeholder" myCollection=site.stakeholders %}
     {% assign stakeholderLinkList = linksString | split: ";" %}
     {% if stakeholderLinkList.size > 0 %}
         <dt>Stakeholder mit dieser Rolle</dt>
@@ -34,11 +34,11 @@ layout: default
     {% endfor %}
 
     {% include /functions/find-artefacts-referencing-stakeholder-role.html
-            myStakeholderRole=page refsAsList=false myType="survey" myCollection=site.surveys withID=true %}
+            myStakeholderRole=page myType="survey" myCollection=site.surveys withID=true %}
     {% assign surveyLinkList = linksString | split: ";" %}
 
     {% include /functions/find-artefacts-referencing-stakeholder-role.html
-            myStakeholderRole=page refsAsList=false myType="workshop" myCollection=site.workshops withID=true %}
+            myStakeholderRole=page myType="workshop" myCollection=site.workshops withID=true %}
     {% assign workshopLinkList = linksString | split: ";" %}
 
     {% if interviewList.size > 0 or surveyLinkList.size > 0 or workshopLinkList.size > 0 %}
@@ -60,11 +60,15 @@ layout: default
     {% comment %}--- Suche die Artefakte, bei denen die Rolle vorkommen ---{% endcomment %}
 
     {% include /functions/find-artefacts-referencing-stakeholder-role.html
-            myStakeholderRole=page refsAsList=false myType="persona" myCollection=site.personas withID=true %}
+            myStakeholderRole=page myType="persona" myCollection=site.personas withID=true %}
     {% assign personaLinkList = linksString | split: ";" %}
 
     {% include /functions/find-artefacts-referencing-stakeholder-role.html
-            myStakeholderRole=page refsAsList=false myType="userStory" myCollection=site.userStories withID=true %}
+            myStakeholderRole=page myType="useCase" myCollection=site.useCases withID=true %}
+    {% assign useCaseLinkList = linksString | split: ";" %}
+
+    {% include /functions/find-artefacts-referencing-stakeholder-role.html
+            myStakeholderRole=page myType="userStory" myCollection=site.userStories withID=true %}
     {% assign userStoryLinkList = linksString | split: ";" %}
 
     {% if personaLinkList.size > 0 or userStoryLinkList.size > 0 %}
@@ -72,7 +76,9 @@ layout: default
         {% for personaLink in personaLinkList %}
             <dd>{{ personaLink }}</dd>
         {% endfor %}
-        <dd>tbd. Use Case</dd>
+        {% for userCaseLink in useCaseLinkList %}
+            <dd>{{ userCaseLink }}</dd>
+        {% endfor %}
         {% for userStoryLink in userStoryLinkList %}
             <dd>{{ userStoryLink }}</dd>
         {% endfor %}
