--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -267,3 +267,8 @@ section {
 subnav ul {
   display: inline-block;
 }
+
+dt {
+  font-family: 'OpenSansSemibold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: bolder;
+}
