--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,14 @@
   </div>
 
   <div class="subnav">
+    <button class="subnavbtn">Qualitätssicherung<i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <span style="float:left; width: 55%"><p>&nbsp;</p></span>
+      <a href="{{ site.url }}{{ '/overview/reviews.html' | relative_url }}">Formale Reviews</a>
+    </div>
+  </div>
+
+  <div class="subnav">
     <button class="subnavbtn">Quellen<i class="fa fa-caret-down"></i></button>
       <div class="subnav-content">
         <span style="float:left; width: 50%"><p>&nbsp;</p></span>
